--- a/spec/config.json
+++ b/spec/config.json
@@ -1,11 +1,12 @@
 {
   "app": {
+    "port": 31288,
+    "host": "127.0.0.1"
+  },
+  "api": {
     "version": "v1",
-    "port": 3000,
-    "host": "127.0.0.1",
     "origin": [
-      "http://localhost:3000",
-      "CurlTest"
+      "Test"
     ]
   },
   "cors": {
